# CVOps

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  Tiltfile  dashboard.html  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  run.js  server.py  sonar-project.properties
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-api.yml  ci-frontend.yml  ci-python.yml  ci-workers.yml  claude-review.yml  claude.yml  lint-api.yml  lint-python.yml  sonarqube.yml
brand/: CVOps-Brand-Guide.html  README.md  cvops-colors.css  cvops-colors.json  gen_assets.py  gen_brand.py  gen_guide.py  gen_imagery.py
db_workflows_plan/: 02-data-model.md  04-storage-performance-access.md  05-workflow-engine.md  06-modularity-and-extensibility.md  07-api-and-dashboard-ux.md
docs/: 01-principles-and-architecture.md  02-data-model.md  03-versioning-concurrency-merge.md  08-controls-governance-security.md  09-gaps-and-considerations.md  10-glossary-and-roadmap.md  11-extract-frames.md  12-auto-label.md  13-upload-to-cvat.md  14-cvat-autolabel.md  MASTER_PLAN.md  README.md  VISION.md  auth-design.md  frontend-design-plan.md  service-icds.md
docs/guides/: implementing-worker-steps.md
docs/services/: README.md  api.md  data-layer.md  frontend.md  mlflow.md  observability.md  redis-streams.md  step-contract.md  worker-cvat.md  worker-labeling.md  worker-preprocessing.md  worker-training.md
examples/yolo-trainer/: README.md  requirements.txt  train.py
frame_extractor/: .gitignore  auto_label.py  cvat_autolabel.py  extract_frames.py  upload_to_cvat.py
graphify-out/: GRAPH_REPORT.md  graph.json  manifest.json
manifests/: .env.example  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  garage.toml
nginx/: nginx.conf
scripts/: .sonar.env.example  git-setup.sh  jj-setup.sh  open-pr.sh  sonar-scan.sh  start_env.sh
services/api/: CLAUDE.md  Dockerfile  entrypoint.sh  pyproject.toml
services/api/alembic/versions/: 0001_initial_schema.py  0002_project_default_ingest_workflow.py  0003_data_source_unique_blob_per_project.py  0003_model_version_optional_container.py  0003_samples_collections_tags.py  0004_model_version_optional_container.py  0004_nullable_commit_ontology_annotation.py  0005_samples_collections_tags.py  0006_nullable_commit_ontology_annotation.py
services/api/docs/db/: ONTOLOGIES.md  PROJECTS.md  VERSIONING.md  WORKFLOWS.md
services/api/src/cvops_api/: config.py  main.py
services/api/src/cvops_api/core/: annotation_import.py  auth.py  pagination.py  rbac.py  registry.py  sample_view.py  storage.py
services/api/src/cvops_api/db/: session.py
services/api/src/cvops_api/db/models/: __init__.py  annotations.py  auth.py  blobs.py  collections.py  models.py  projects.py  samples.py  tags.py  versioning.py
services/api/src/cvops_api/engine/: coordinator.py  dispatch.py  executor.py  ref_resolver.py  step.py
services/api/src/cvops_api/routers/: auth.py  collections.py  cvat.py  data_sources.py  datasets.py  internal.py  models.py  ontologies.py  orgs.py  projects.py  registry.py  runs.py  samples.py  tags.py  viewer.py
services/api/src/cvops_api/schemas/: collections.py  data_sources.py  datasets.py  models.py  ontologies.py  orgs.py  projects.py  runs.py  samples.py  tags.py  training_containers.py  workflows.py
services/api/tests/: conftest.py
services/api/tests/api/: test_internal.py
services/api/tests/core/: test_config.py  test_registry.py  test_storage.py
services/api/tests/db/: test_blobs.py  test_labeling.py  test_models.py  test_ontologies.py  test_runs.py  test_samples.py  test_versioning.py
services/api/tests/engine/: test_coordinator.py  test_coordinator_edge.py  test_ref_resolver.py
services/api/tests/routers/: test_annotated_uploads.py  test_auth.py  test_collections.py  test_cvat.py  test_data_sources.py  test_datasets.py  test_datasets_crud.py  test_datasets_train.py  test_image_upload.py  test_models.py  test_ontologies.py  test_orgs.py  test_projects.py  test_registry.py  test_routing.py  test_runs.py  test_runs_lifecycle.py  test_samples_curation.py  test_tags.py  test_training_containers.py  test_viewer.py  test_workflows.py
services/api/tests/steps/: test_commit_dataset.py  test_export_yolo.py  test_extract_frames.py  test_human_review.py  test_split_strategies.py  test_stub_steps.py  test_train.py
services/api/tests/worker/: test_orphan_recovery.py  test_process_step.py  test_worker_loop.py
services/api/tests/worker_common/: conftest.py  test_config.py  test_consumer.py  test_runner.py
services/worker-cvat/: .gitignore  Dockerfile  pyproject.toml  yolo-base.Dockerfile
services/worker-cvat/src/worker_cvat/: __main__.py  cvat_client.py  deploy_step.py  deployer.py  main.py  sync.py  worker.py
services/worker-cvat/tests/: conftest.py  test_runner.py  test_sync.py  test_sync_edge_cases.py  test_wiring.py
services/worker-preprocessing/: Dockerfile  pyproject.toml
services/worker-preprocessing/src/cvops_worker/: __init__.py  __main__.py  worker.py
services/worker-preprocessing/src/worker_preprocessing/: main.py
services/worker-preprocessing/tests/: conftest.py  test_worker.py
services/worker-training/: Dockerfile  pyproject.toml
services/worker-training/src/worker_training/: main.py
services/worker-training/src/worker_training/steps/: train.py
services/worker-training/tests/: conftest.py  test_train_step.py
(+175 files in other folders)
