[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvops-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  # Web framework
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  # DB
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  # Config
  "pydantic-settings>=2.3",
  "pydantic[email]>=2.0",
  # Auth
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "bcrypt<4.1",
  "python-multipart>=0.0.9",
  # Storage
  "boto3>=1.34",
  # Validation
  "jsonschema>=4.22",
  # Image processing
  "pillow>=10.3",
  # Docker dispatch (step.train)
  "docker>=7.1",
  # HTTP client (CVAT/model-deployer proxy)
  "httpx>=0.27",
  # Cache / token blacklist
  "redis[asyncio]>=5.0",
  # Utilities
  "imagehash>=4.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "httpx>=0.27",
  "respx>=0.21",
  "moto[s3]>=5",
  "testcontainers[postgres]>=4",
  "fakeredis>=2.23",
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cvops_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
