[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvops-worker-cvat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "cvops-api",            # registry, coordinator (advance_workflow), redis, DB models
  "cvops-steps",          # human_review (and future cvat-queue steps)
  "cvops-worker-common",  # ConsumerLoop, session factory
  "cvops-cvat-client",    # CVAT REST: pull reviewed annotations
  "redis[asyncio]>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker_cvat"]
