[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvops-worker-cvat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "cvops-api",            # registry, coordinator (advance_workflow), redis, DB models
  "cvops-steps",          # human_review (and future cvat-queue steps)
  "cvops-worker-common",  # ConsumerLoop, session factory
  "cvops-cvat-client",    # CVAT REST: pull reviewed annotations
  "redis[asyncio]>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "testcontainers[postgres]>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker_cvat"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]  # make `tests` importable (shared seed helpers in tests.conftest)
