[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvops-worker-preprocessing"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "cvops-api",    # settings, db session, registry, coordinator (process_step)
  "cvops-steps",  # step implementations (extract_frames, …)
  "redis>=5.0",   # stream consumer
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "fakeredis>=2.20",  # in-memory Redis Streams for the consumer-loop tests
]

[tool.hatch.build.targets.wheel]
packages = ["src/cvops_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
