[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worker-training"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "cvops-worker-common",
  "cvops-api",
  "cvops-steps",  # step.train implementation (shared with the API registry)
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker_training"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
